--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-horizontal-scrolling-menu": "^4.1.1",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "sweetalert2": "^11.10.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
